# zap

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE  README.md  conda-lock.yml  environment-lock.yml  environment.yaml  environment.yml  envlock_gpu.txt  pyproject.toml
.github/workflows/: documentation.yml
cone_notebooks/: benchmarks_tb.py  cone_bridge_tb.py  cu_tb.ipynb  max_flow_tb.ipynb  soc_tb.py
cone_tests/: cone_bridge_debugger_test.py  max_flow_tb.ipynb  non_pypsa_net_debugger_test.py
demo/: 01_basics.html  01_basics.ipynb  01_basics.py  interactive.py
development/: 01_basic_type.py  02_layer_diff.py  03_admm.py  04_planning.py  05_relaxation.py  06_experiment_launcher.py  07_warm_start.py  08_plot_results.py  09_gpu.py  10_battery_admm.py  11_admm_clean.py  12_planning_gpu.py  13_contingency.py  13_contingency_cvx.py  14_admm_debug.py  15_sixbus.py  16_sparse_gpu.py  17_gpu_benchmark.py  18_scaling.py  19_benchmarking.py  _test_injector.py  demo_lmb.py  dev_parallel.py
docs/source/: basic_num.ipynb  conf.py  index.rst  pypsa_example.ipynb  quickstart.md
docs/source/electricity_system_modeling/: basic.ipynb  (+1 more)
experiments/: 01_gpu_perf.py  clean_pypsa.py  launch.py  plotter.py  runner.py  wb.py
experiments/config/: base_v01.yaml  base_v02.yaml  base_v03.yaml  base_v04.yaml  base_v05.yaml  base_v06.yaml  benchmark_parallel_v06.yaml  cost_battery_v03.yaml  cost_reconductor_v01.yaml  cost_reconductor_v02.yaml  cost_reconductor_v03.yaml  default.yaml  gpu_exp_v01.yaml  gpu_zero_v02.yaml  step_size_v01.yaml  test.yaml  test_default.yaml  test_gpu_v02.yaml  test_gpu_v08.yaml  warm_v01.yaml  warm_v03.yaml  warm_v06.yaml  year_compare_v01.yaml  year_compare_v02.yaml  year_gpu_base_v02.yaml  year_gpu_test_v01.yaml  year_gpu_v01.yaml  year_gpu_v02.yaml  year_gpu_v03.yaml  year_gpu_v04.yaml  year_gpu_v05.yaml  year_gpu_v06.yaml  year_gpu_v08.yaml  year_gpu_v09.yaml  year_gpu_v12.yaml  year_init_v01.yaml  year_test_v01.yaml
experiments/conic_solve/: launch.py  runner.py
experiments/plan/: 01_net_plot.py  launch.py  plotter.py  runner.py
experiments/plot/: 01_converge.py  02_battery_cost.py  03_scalability.py
experiments/pypsa/: config.yaml  generate.py
experiments/resource_opt_solve/: launch.py  runner.py
experiments/solve/: launch.py  plotter.py  runner.py
resource_opt_notebooks/: NUM_20k_seed42.h5  NUM_20k_seed42_solution.h5
zap/: __init__.py  admm.py  dual.py  hello.py  layer.py  network.py  util.py
zap/admm/: __init__.py  basic_solver.py  layer.py  util.py  weighted_solver.py
zap/conic/: __init__.py  cone_bridge.py  cone_utils.py  quadratic_device.py  slack_device.py  variable_device.py
zap/devices/: __init__.py  abstract.py  ground.py  injector.py  power_target.py  storage_unit.py  store.py  transporter.py
zap/exporters/: __init__.py  pypsa.py
zap/importers/: __init__.py  pypsa.py  toy.py
zap/planning/: __init__.py  investment_objectives.py  objectives.py  operation_objectives.py  problem.py  problem_abstract.py  problem_admm.py  problem_api.py  problem_cvx.py  problem_remote.py  relaxation.py  solvers.py  trackers.py
zap/resource_opt/: __init__.py  nu_opt_bridge.py  utility_device.py
zap/tests/: network_examples.py  plotting_helpers.py  test_dual.py  test_network.py  test_pypsa_dispatch.py  test_pypsa_investment.py
(+127 files in other folders)
