[tool.poetry]
name = "zap"
version = "0.1.0"
description = "Differentiable electricity models"
authors = ["degleris1 <degleris1@gmail.com>"]
readme = "README.md"
license = "Apache-2.0"
exclude = [
    "experiments",
    "development",
]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "^1.26.4"
scipy = "^1.12.0"
torch = "~2.2.0"
pypsa = {version = "^0.27.0", optional = true}
sparse-dot-mkl = {version = "^0.9.6", optional = true}
attrs = "^24.2.0"
marimo = "^0.11.21"
cvxpy = "^1.6.4"
ortools = "9.11.4210"
scikit-sparse = { version = "^0.4.16", optional = true }

[tool.poetry.extras]
pypsa = ["pypsa"]
mkl = ["sparse-dot-mkl"]
cholmod = ["scikit-sparse"]

[tool.poetry.group.dev.dependencies]
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
nbformat = "^5.10.4"
ipykernel = "^6.29.5"

[tool.poetry.group.experiment]
optional = true

[tool.poetry.group.experiment.dependencies]
wandb = "^0.18.5"
mosek = "^10.2.6"


[tool.poetry.group.docs.dependencies]
sphinx = "^8.1.3"
nbsphinx = "^0.9.5"
myst-parser = "^4.0.0"
furo = "^2024.8.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100